# OrbbecSDK-K4A-Wrapper

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  Jenkinsfile  README.md  README_INSTALL.md  README_PUBLIC.md
.github/workflows/: c-cpp.yml
examples/green_screen/: MultiDeviceCapturer.h
examples/streaming/: main.c
examples/transformation/: main.cpp
examples/viewer/opengl/: k4astaticimageproperties.h  main.cpp
include/k4a/: .gitignore  k4a.h  k4a.hpp  k4atypes.h
include/k4ainternal/: calibration.h  common.h  matroska_common.h
scripts/orbbec/: win10_build.ps1
src/: CMakeLists.txt
src/calibration/: calibration.c
src/csharp/Examples/WPF/: Microsoft.Azure.Kinect.Sensor.Examples.WPFViewer.csproj
src/csharp/Examples/WinForms/: Microsoft.Azure.Kinect.Sensor.Examples.WinForms.csproj
src/csharp/Tests/FunctionalTests/: Microsoft.Azure.Kinect.Sensor.FunctionalTests.csproj
src/csharp/Tests/StubGenerator.UnitTests/: Microsoft.Azure.Kinect.Sensor.Test.StubGenerator.UnitTests.csproj
src/csharp/Tests/UnitTests/: Microsoft.Azure.Kinect.Sensor.UnitTests.csproj
src/deloader/: deloader.cpp
src/orbbec/: .gitignore  CMakeLists.txt  ob_k4a_impl.c  ob_k4a_impl.cpp  ob_type_helper.cpp
src/orbbec/docs/: CMakeLists.txt  Doxyfile.in  OrbbecSDK-Kinect-Wrapper Sample编译说明.doc  OrbbecSDK-Kinect-Wrapper 接口API使用说明.doc  OrbbecSdk kinect wrapper 使用指南(v1.0.9).docx  api_reference_main_page.md
src/orbbec/docs/kinect-wrapper.md/CN/: Orbbec SDK（Kinect）使用手册.md
src/orbbec/frame_queue/: CMakeLists.txt  frame_queue.c
src/orbbec/imu_sync/: CMakeLists.txt  imusync.c
src/orbbec/include/: frame_queue.h  imusync.h  ob_type_helper.h  ob_type_helper.hpp  obmetadata.h  utils.h
src/orbbec/record/: CMakeLists.txt
src/orbbec/record/internal/: CMakeLists.txt  ob_matroska_read.cpp  ob_matroska_read.h
src/orbbec/record/sdk/: CMakeLists.txt  playback.cpp
src/record/internal/: matroska_read.cpp
src/record/sdk/: record.cpp
src/transformation/: intrinsic_transformation.c  mode_specific_calibration.c  rgbz.c
tests/: CMakeLists.txt
tests/UnitTests/utcommon/: utcommon.cpp
tests/Utilities/ConnEx/: ConnEx.cpp
tests/latency/: latency_perf.cpp
tests/throughput/: throughput_perf.cpp
tools/: CMakeLists.txt
tools/k4arecorder/: main.cpp
tools/k4aviewer/: k4acolorimageconverter.cpp  k4aconvertingimagesource.h  k4adevicedockcontrol.cpp  k4adevicedockcontrol.h  k4aframeratetracker.h  k4apointcloudwindow.cpp  k4arecordingdockcontrol.cpp  k4arecordingdockcontrol.h  k4asourceselectiondockcontrol.cpp  k4astaticimageproperties.h  k4atypeoperators.cpp  k4avideowindow.cpp  k4aviewer.cpp  k4aviewersettingsmanager.h  main.cpp
